Fix for images wrapping around comment-holder

--- a/scss/layout.scss
+++ b/scss/layout.scss
@@ -744,6 +744,8 @@ footer {
  * Comments
  */
 #comments-holder {	
+	clear: both;
+	
 	ul.action-links {
 		margin-top: 10px;
 		text-align: right;
